# Family-meal-planner

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: full-ci.yml  unit-tests.yml
ai-service/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/src/: __init__.py
ai-service/src/config/: settings.py
ai-service/src/embeddings/: __init__.py  batch_embed.py  embedding_service.py  mongo_client.py  qdrant_client.py
ai-service/tests/: __init__.py  test_embedding_service.py
backend/: Dockerfile  pom.xml
backend/src/main/java/com/mealplanner/: MealPlannerApplication.java
backend/src/main/java/com/mealplanner/config/: MongoConfig.java  WebConfig.java
backend/src/main/resources/: application-dev.yml  application-test.yml  application.yml
backend/src/main/resources/data/: recipes_seed.json
backend/src/test/java/com/mealplanner/: MealPlannerApplicationTests.java
docs/: openapi.yaml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: ConfirmDialog.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  PantryForm.tsx  RecipeForm.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  PantryPage.tsx  RecipeDetailPage.tsx  RecipesPage.tsx
frontend/src/services/: api.ts  healthService.ts  pantryService.ts  recipeService.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
(+27 files in other folders)
